# Jarvis

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  REFACTOR-PLAN.md  main.py  note.md  pi-architecture-reference.md  pyproject.toml  unused-files-list.md  v4-refactor-plan.md
.sessions/: session_20260615_020432.jsonl  session_20260615_020558.jsonl  session_20260615_020711.jsonl  session_20260615_021626.jsonl  session_20260615_021849.jsonl  session_20260615_022140.jsonl  session_20260615_023048.jsonl  session_20260615_051850.jsonl  session_20260615_060911.jsonl  session_20260615_080054.jsonl  session_20260615_080329.jsonl  session_20260615_081537.jsonl  session_20260615_081645.jsonl  session_20260615_081845.jsonl  session_20260615_083031.jsonl
docs/plans/: 2026-06-11-coding-agent-core.md
src/: agent.py  answer.md  ask.md  cli.py  config.py  main.py  plan.md  result.py  test.py  workspace.py
src/Agent/: __init__.py  agent.py  loop.py  models.py
src/AgentSession/: agent_session.py  agent_state.py
src/Client/: __init__.py  base.py  openai.py
src/Context/: __init__.py
src/Environment/: workSpace.py
src/EventBus/: __init__.py
src/Features/: __init__.py  memory.py  skill_bundled.py  skills.py
src/Interact/: __init__.py
src/Messages/: __init__.py  messages.py
src/Providers/: base.py  errors.py
src/Runtime/: runtime.py  runtime_checkpoints.py  runtime_consumers.py  runtime_events.py  runtime_secret.py  session_events.py  task_state.py
src/Sessions/: __init__.py  (+1 more)
tests/: test_agent.py  test_builtin_tools.py  test_client.py  test_tools.py
(+68 files in other folders)
