[project]
name = "agent-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "pygments>=2.18.0",
    "wcwidth>=0.2.13",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
coding-agent = "src.main:cli"
