[project]
name = "agent-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "typer>=0.26.4",
    "loguru>=0.7.3",
]
